# screentime-collector

./: Cargo.toml  README.md  devenv.nix  timkpr.server.xml
src/: main.rs
src/dbus/: mod.rs
src/dbus/timekpr/: admin.rs
src/dbus/timekpr/user/: admin.rs  limits.rs  mod.rs  sessionattributes.rs
